Harden bounded completion delivery and verify release contracts